# agent-memory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ASSIGNMENT.md  BENCHMARKS.md  CHANGELOG.md  Dockerfile  README.md  biome.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
bench/: README.md  harness.py  harness.ts  report.ts
bench/scenarios/: comparison.json
bench/suite/: judge.ts  recompute-strict.ts  restamp-cost.ts  run.ts  runner.ts  types.ts
docs/: BENCHMARKS.md  COMPARISON.md
docs/research/: REVIEW-BEFORE-IMPROVEMENTS.md  failure-analysis-and-action-plan.md  locomo-sota-techniques.md  probe-discrimination-audit.md
fixtures/: basic.json
implementations/: README.md
implementations/baseline/: .dockerignore  README.md  biome.json  package-lock.json  package.json  vitest.config.ts
implementations/maxxed/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  biome.json  docker-compose.yml  package-lock.json  package.json  (+1 more)
scripts/: check-requirements.ts  check_requirements.py  run-adversarial.sh  run-comparison.sh  run-contradiction.sh  run-hardening.sh  run-opinionated-sweep.sh  run-suite.sh  smoke.ts
src/: app.ts  config.ts  logging.ts  store.ts  text.ts  tokens.ts
tests/: concurrentSessions.test.ts  conftest.py  contract.test.ts  factEvolution.test.ts  helpers.ts  robustness.test.ts  test_concurrent_sessions.py  test_contract.py  test_fact_evolution.py  test_persistence.py  test_recall_quality.py  test_robustness.py
(+195 files in other folders)
